# tic-taskell

./: .gitignore  README.md  tic-taskell.cabal
src/: Board.hs  Main.hs  Minimax.hs  Server.hs  Static.hs  Utils.hs
static/css/: style.css
static/js/: home.js
views/: 404.html  home.html
