name:                tic-taskell
version:             0.0.0.0
synopsis:            Tic tac toe written in Haskell, accessible through a web API.
description:         Tic tac toe written in Haskell, accessible through a web API.
homepage:            http://github.com/crockeo/tic-taskell
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmailcom
copyright:           (c) 2014, Cerek Hillen
category:            Website
build-type:          Simple
cabal-version:       >=1.10

executable tic-taskell
  ghc-options:         -Wall -fno-warn-unused-do-bind

  default-extensions:  OverloadedStrings

  main-is:             Main.hs

  build-depends:       base         == 4.7.*
               ,       scotty       == 0.9.*
               ,       elerea       == 2.7.*
               ,       lens         == 4.4.*
               ,       transformers == 0.4.*

  hs-source-dirs:      src/

  default-language:    Haskell2010
